src/test/ui/parser/issues/issue-90993.rs
fn main() {
    ...=.
    //~^ ERROR: unexpected token: `...`
    //~| ERROR: unexpected `=` after inclusive range
    //~| ERROR: expected one of `-`, `;`, `}`, or path, found `.`
}
